# Automation

ProjectObjectModel-Pytest/Config/: config.py
ProjectObjectModel-Pytest/Pages/: BasePage.py  LoginPage.py
ProjectObjectModel-Pytest/Tests/: conftest.py  test_LoginPage.py
Simplest-Pytest/saucedemo/: README.md  pyproject.toml
Simplest-Pytest/saucedemo/tests/: conftest.py  test_login.py  test_login_actual.py
