[tool.poetry]
name = "saucedemo"
version = "0.1.0"
description = ""
authors = ["KirillDegtyarev <lirik19@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.8.3"
pytest = "^7.3.0"
webdriver-manager = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
